fix narrow device unintended overflow

--- a/wandering-inn-stats-viewer/src/app/app.component.scss
+++ b/wandering-inn-stats-viewer/src/app/app.component.scss
@@ -3,14 +3,6 @@ mat-drawer-container {
   width: 100%;
 }
 
-
-.page {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
-}
-
 main {
   display: flex;
   justify-content: center;
